--- a/index.html
+++ b/index.html
@@ -31,7 +31,62 @@
             <a class="nav-link active" href="contact.html" tabindex="-2" aria-disabled="true">Contact</a>
           </li>
         </ul>
-        
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="recherche" aria-label="Search">
+          <button class="btn btn-outline-warning" type="submit">recherche</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+</header>
+
+<main>
+<!-- Desktop version -->
+  <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="bd-placeholder-img" width="100%" height="auto" src="canicross.jpg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/>
+
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Événement : Canicross au profit de notre association canine</h1>
+            <p>Participez à notre course Canicross : toutes les inscriptions seront reversées au profit de l'association.</p>
+            <p><a class="btn btn-dark mb-2" href="#">Plus d'informations ici ↩︎</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="bd-placeholder-img" width="100%" height="auto" src="bulldog.jpg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/>
+
+        <div class="container">
+          <div class="carousel-caption">
+            <h1> Sauvez les chiens ! </h1>
+            <p> Adoptez des chiens de notre association, c'est leur donner une 2eme vie…</p>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="bd-placeholder-img" width="100%" height="auto" src="corgui.jpg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/>
+
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>N'abandonnez pas votre animal dans la nature…</h1>
+            <p>Pensez à notre association.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="presentation">
+    <div class="col-lg-12"></div>
+      <p><img class="img-home" src="puppy-accueil.jpg"></p>
+    </div>
           </div>    
   </body>
   </html>
