--- a/contact.html
+++ b/contact.html
@@ -38,3 +38,39 @@
       </div>
     </nav>
   </header>
+  <!--Section: Contact v.2-->
+<section class="mb-4">
+
+    <!--Section heading-->
+    <h2 class="h1-responsive font-weight-bold text-center my-4">Contactez nous</h2>
+    <!--Section description-->
+    <p class="text-center w-responsive mx-auto mb-5">Si vous avez une questions ou si vous souhaitez adopter un chien.</p>
+
+    <div class="row">
+
+        <!--Grid column-->
+        <div class="col-md-9 mb-md-0 mb-5">
+            <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+
+                <!--Grid row-->
+                <div class="row">
+
+                    <!--Grid column-->
+                    <div class="col-md-6">
+                        <div class="md-form mb-0">
+                            <input type="text" id="name" name="name" class="form-control">
+                            <label for="name" class="">Votre nom et prénom</label>
+                        </div>
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-md-6">
+                        <div class="md-form mb-0">
+                            <input type="text" id="email" name="email" class="form-control">
+                            <label for="email" class="">Votre email</label>
+                        </div>
+                    </div>
+                    <!--Grid column-->
+
+                </div>
