--- a/contact.html
+++ b/contact.html
@@ -74,3 +74,70 @@
                     <!--Grid column-->
 
                 </div>
+                <!--Grid row-->
+
+                <!--Grid row-->
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="md-form mb-0">
+                            <input type="text" id="subject" name="subject" class="form-control">
+                            <label for="subject" class="">Sujet</label>
+                        </div>
+                    </div>
+                </div>
+                <!--Grid row-->
+
+                <!--Grid row-->
+                <div class="row">
+
+                    <!--Grid column-->
+                    <div class="col-md-12">
+
+                        <div class="md-form">
+                            <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
+                            <label for="message">Votre message</label>
+                        </div>
+
+                    </div>
+                </div>
+                <!--Grid row-->
+
+            </form>
+
+            <div class="text-center text-md-left">
+                <a class="btn btn-outline-warning" onclick="document.getElementById('contact-form').submit();">Envoyer</a>
+            </div>
+            <div class="status"></div>
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-md-3 text-center">
+            <ul class="list-unstyled mb-0">
+                <li><i class="fas fa-map-marker-alt fa-2x"></i>
+                    <p>Paris</p>
+                </li>
+
+                <li><i class="fas fa-phone mt-4 fa-2x"></i>
+                    <p> 01 23 45 67 89</p>
+                </li>
+
+                <li><i class="fas fa-envelope mt-4 fa-2x"></i>
+                    <p>contact@associationcanine.com</p>
+                </li>
+                <li><i class="fas fa-envelope mt-4 fa-2x"></i>
+                    <p><img class="img-contact" src="chien-contact.jpg"></p>
+                </li>
+            </ul>
+        </div>
+        <!--Grid column-->
+
+    </div>
+
+</section>
+<!--Section: Contact v.2-->
+<footer>
+    <p class="float-end"><a href="#">En haut</a></p>
+    <p>&copy; 2022 - création d'Emeline Titus. &middot; <a href="#">Mentions légales</a> <a href="https://www.facebook.com/emeline.titus/"><img class="fit-picture" src="facebook.png" alt="logo facebook"></a><a href="https://www.instagram.com/emeimola18/?hl=fr"><img class="fit-picture" src="instagram.png" alt="logo instagram"></a> <img class="fit-picture" src="youtube.png"></p>
+  </footer>
+</html>
