--- a/mentions.html
+++ b/mentions.html
@@ -40,7 +40,23 @@
   </nav>
 </header>
 <main>
-
+<h1>Mentions légales</h1>
+<p>Pour satisfaire aux dispositions de la loi pour la confiance dans l’économie numérique du 21 juin 2004, seront énoncées ci-après les mentions légales requises afin de permettre l’identification de l’éditeur du présent site Internet.</p>
+<p>Statut du propriétaire : Société
+    Nom de l'association' : PROTECTION CANINE
+    Forme juridique : Société à but non lucratif
+    Au Capital de : 2000,00 €
+    Adresse : Paris
+    Tél : +33 1 23 45 67 89
+</p>
+<p>
+    Adresse de courrier électronique : contact@associationcanine.com
+    Le service téléphonique du présent site est accessible du lundi au vendredi de 9h00 à 13h et de 14h à 17h
+    Le Responsable de la publication du site est : Emeline Titus
+    Le Webmaster est : Emeline Titus
+    Ce site internet a été réalisé en utilisant la solution Github
+    L'hébergeur du site est : Github - 4 rue Jules Lefebvre 75009 Paris - France
+</p>
 <!-- FOOTER -->
       
 <footer>
