--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
       </div>
     </nav>
   </header>
-  <!--Section: Contact v.2-->
+<!--Section: Contact v.2-->
 <section class="mb-4">
 
     <!--Section heading-->
@@ -137,7 +137,7 @@
 </section>
 <!--Section: Contact v.2-->
 <footer>
-    <p class="float-end"><a href="mentions.html">En haut</a></p>
-    <p>&copy; 2022 - création d'Emeline Titus. &middot; <a href="#">Mentions légales</a> <a href="https://www.facebook.com/emeline.titus/"><img class="fit-picture" src="facebook.png" alt="logo facebook"></a><a href="https://www.instagram.com/emeimola18/?hl=fr"><img class="fit-picture" src="instagram.png" alt="logo instagram"></a> <img class="fit-picture" src="youtube.png"></p>
+    <p class="float-end"><a href="#">En haut</a></p>
+    <p>&copy; 2022 - création d'Emeline Titus. &middot; <a href="mentions.html">Mentions légales</a> <a href="https://www.facebook.com/emeline.titus/"><img class="fit-picture" src="facebook.png" alt="logo facebook"></a><a href="https://www.instagram.com/emeimola18/?hl=fr"><img class="fit-picture" src="instagram.png" alt="logo instagram"></a> <img class="fit-picture" src="youtube.png"></p>
   </footer>
 </html>
