--- a/mentions.html
+++ b/mentions.html
@@ -61,13 +61,9 @@
       
 <footer>
     <p class="float-end"><a href="#">En haut</a></p>
-    <p>&copy; 2022 - création d'Emeline Titus. &middot; <a href="#">Mentions légales</a><a href="https://www.facebook.com/emeline.titus/"><img class="fit-picture" src="facebook.png" alt="logo facebook"></a><a href="https://www.instagram.com/emeimola18/?hl=fr"><img class="fit-picture" src="instagram.png" alt="logo instagram"></a> <img class="fit-picture" src="youtube.png"></p>
+    <p>&copy; 2022 - création d'Emeline Titus. &middot; <a href="mentions.html">Mentions légales</a><a href="https://www.facebook.com/emeline.titus/"><img class="fit-picture" src="facebook.png" alt="logo facebook"></a><a href="https://www.instagram.com/emeimola18/?hl=fr"><img class="fit-picture" src="instagram.png" alt="logo instagram"></a> <img class="fit-picture" src="youtube.png"></p>
   </footer>
 </main>
-
-
-    <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
-
-      
+    <script src="assets/dist/js/bootstrap.bundle.min.js"></script>   
   </body>
 </html>
