--- a/mentions.html
+++ b/mentions.html
@@ -41,6 +41,7 @@
 </header>
 <main>
 <h1>Mentions légales</h1>
+<div class="mentions">
 <p>Pour satisfaire aux dispositions de la loi pour la confiance dans l’économie numérique du 21 juin 2004, seront énoncées ci-après les mentions légales requises afin de permettre l’identification de l’éditeur du présent site Internet.</p>
 <p>Statut du propriétaire : Société
     Nom de l'association' : PROTECTION CANINE
@@ -57,11 +58,12 @@
     Ce site internet a été réalisé en utilisant la solution Github
     L'hébergeur du site est : Github - 4 rue Jules Lefebvre 75009 Paris - France
 </p>
+</div>
 <!-- FOOTER -->
       
 <footer>
     <p class="float-end"><a href="#">En haut</a></p>
-    <p>&copy; 2022 - création d'Emeline Titus. &middot; <a href="#">Mentions légales</a><a href="https://www.facebook.com/emeline.titus/"><img class="fit-picture" src="facebook.png" alt="logo facebook"></a><a href="https://www.instagram.com/emeimola18/?hl=fr"><img class="fit-picture" src="instagram.png" alt="logo instagram"></a> <img class="fit-picture" src="youtube.png"></p>
+    <p>&copy; 2022 - création d'Emeline Titus. &middot; <a href="mentions.html">Mentions légales</a><a href="https://www.facebook.com/emeline.titus/"><img class="fit-picture" src="facebook.png" alt="logo facebook"></a><a href="https://www.instagram.com/emeimola18/?hl=fr"><img class="fit-picture" src="instagram.png" alt="logo instagram"></a> <img class="fit-picture" src="youtube.png"></p>
   </footer>
 </main>
 
