last-modifications-pages

--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <title>Contact</title>
+    <meta name="description" content="Vous souhaitez adopter un chien ? Contactez-nous, nous avons certainement celui qu'il vous faut !">
+    <title>Protection canine : Contact</title>
     
 <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -14,7 +14,7 @@
   <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Protection Canine</a>
+        <a class="navbar-brand" href="index.html">Protection Canine</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
