--- a/mentions.html
+++ b/mentions.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <title>Protection Canine</title>
+    <meta name="description" content="Mentions légales de notre association canine.">
+    <title>Protection Canine : mentions légales</title>
     
 <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
