--- a/mentions.html
+++ b/mentions.html
@@ -3,65 +3,78 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Mentions légales de notre association canine.">
-    <title>Protection Canine : mentions légales</title>
+    <meta name="description" content="Protection canine est une association spécialisée dans le sauvetage de chiens maltraités ou abonnés et le placement des chiens sauvés.">
+    <title>Protection Canine : présentation de notre association canine</title>
     
 <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
-    <header>
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Protection Canine</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-              <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="index.html">Accueil</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="evenement.html" tabindex="-1" aria-disabled="true">Événement</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="contact.html" tabindex="-2" aria-disabled="true">Contact</a>
-                </li>
-              </ul>
-              <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="recherche" aria-label="Search">
-                <button class="btn btn-outline-warning" type="submit">recherche</button>
-              </form>
-            </div>
-          </div>
-        </nav>
-      </header>
-   <main>
+    
+<header>
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">Protection Canine</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Accueil</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="evenement.html" tabindex="-1" aria-disabled="true">Événement</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="contact.html" tabindex="-2" aria-disabled="true">Contact</a>
+          </li>
+        </ul>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="recherche" aria-label="Search">
+          <button class="btn btn-outline-warning" type="submit">recherche</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+</header>
+<main>
     <h1>Mentions légales</h1>
-<div class="mentions">
+
+       <p><img class="slider-pagementions" src="slider-mentions.jpg" alt="Canicross : ancien événement"></p>
+
+    <div class="mentions">
 <p>Pour satisfaire aux dispositions de la loi pour la confiance dans l’économie numérique du 21 juin 2004, seront énoncées ci-après les mentions légales requises afin de permettre l’identification de l’éditeur du présent site Internet.</p>
-<p>Statut du propriétaire : Société
-    Nom de l'association' : PROTECTION CANINE
-    Forme juridique : Société à but non lucratif
-    Au Capital de : 2000,00 €
-    Adresse : Paris
-    Tél : +33 1 23 45 67 89
-</p>
-<p>
-    Adresse de courrier électronique : contact@associationcanine.com
-    Le service téléphonique du présent site est accessible du lundi au vendredi de 9h00 à 13h et de 14h à 17h
-    Le Responsable de la publication du site est : Emeline Titus
-    Le Webmaster est : Emeline Titus
-    Ce site internet a été réalisé en utilisant la solution Github
-    L'hébergeur du site est : Github - 4 rue Jules Lefebvre 75009 Paris - France
-</p>
-</div>
+    <p>Statut du propriétaire : Société</p>
+        <p> Nom de l'association' : PROTECTION CANINE</p>
+            <p> Forme juridique : Société à but non lucratif</p>
+                <p> Au Capital de : 2000,00 €</p>
+                    <p> Adresse : Paris </p>
+                        <p>  Tél : +33 1 23 45 67 89 </p>
+
+<p> Adresse de courrier électronique : contact@associationcanine.com</p>
+    <p>   Le service téléphonique du présent site est accessible du lundi au vendredi de 9h00 à 13h et de 14h à 17h</p>
+        <p>  Le Responsable de la publication du site est : Emeline Titus</p>
+            <p> Le Webmaster est : Emeline Titus</p>
+                <p> Ce site internet a été réalisé en utilisant la solution Github</p>
+                    <p> L'hébergeur du site est : Github - 4 rue Jules Lefebvre 75009 Paris - France</p>
+
+  </div>
+
+  <!-- FOOTER -->
+<div class="footer-basic">
     <footer>
-        <p class="float-end"><a href="#">En haut</a></p>
-        <p>&copy; 2022 - création d'Emeline Titus. &middot; <a href="mentions.html">Mentions légales</a> <a href="https://www.facebook.com/emeline.titus/"><img class="fit-picture" src="facebook.png" alt="logo facebook"></a><a href="https://www.instagram.com/emeimola18/?hl=fr"><img class="fit-picture" src="instagram.png" alt="logo instagram"></a> <img class="fit-picture" src="youtube.png"></p>
-      </footer>
+        <div class="social"><a href="https://www.facebook.com/emeline.titus/"><img class="fit-picture" src="facebook.png" alt="logo facebook"></a><a href="https://www.instagram.com/emeimola18/?hl=fr"><img class="fit-picture" src="instagram.png" alt="logo instagram"></a></div>
+        <ul class="list-inline">
+            <li class="list-inline-item"><a href="index.html">Accueil</a></li>
+            <li class="list-inline-item"><a href="evenement.html">Evenement</a></li>
+            <li class="list-inline-item"><a href="mentions.html">Mentions</a></li>
+            <li class="list-inline-item"><a href="contact.html">Contact</a></li>
+        </ul>
+        <p class="copyright">Emeline Titus © 2022</p>
+    </footer>
+    </div>
     </main>
-    </body>
-    </html>
+ </body>
+ </html>
