--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Vous souhaitez adopter un chien ? Contactez-nous, nous avons certainement celui qu'il vous faut !">
     <title>Protection canine : Contact</title>
-    
-<link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
   </head>
+  <body>
   <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
       <div class="container-fluid">
@@ -40,7 +39,7 @@
   <!--Section: Contact v.2-->
 <section class="mb-4">
     <!--Section heading-->
-    <h2 class="h1-responsive font-weight-bold text-center my-4">Contactez nous</h2>
+    <h1 class="h1-responsive font-weight-bold text-center my-4">Contactez nous</h1>
     <!--Section description-->
     <p class="text-center w-responsive mx-auto mb-5">Si vous avez une questions ou si vous souhaitez adopter un chien.</p>
 
@@ -147,4 +146,6 @@
         <p class="copyright">Emeline Titus © 2022</p>
     </footer>
     </div>
+    <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
