--- a/mentions.html
+++ b/mentions.html
@@ -68,7 +68,7 @@
         <div class="social"><a href="https://www.facebook.com/emeline.titus/"><img class="fit-picture" src="facebook.png" alt="logo facebook"></a><a href="https://www.instagram.com/emeimola18/?hl=fr"><img class="fit-picture" src="instagram.png" alt="logo instagram"></a></div>
         <ul class="list-inline">
             <li class="list-inline-item"><a href="index.html">Accueil</a></li>
-            <li class="list-inline-item"><a href="evenement.html">Evenement</a></li>
+            <li class="list-inline-item"><a href="evenement.html">Événement</a></li>
             <li class="list-inline-item"><a href="mentions.html">Mentions</a></li>
             <li class="list-inline-item"><a href="contact.html">Contact</a></li>
         </ul>
@@ -76,5 +76,6 @@
     </footer>
     </div>
     </main>
+    <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
  </body>
  </html>
