last-modifications-pages-css-definitif

--- a/contact.html
+++ b/contact.html
@@ -36,13 +36,14 @@
       </div>
     </nav>
   </header>
+  
   <!--Section: Contact v.2-->
 <section class="mb-4">
     <!--Section heading-->
     <h1 class="h1-responsive font-weight-bold text-center my-4">Contactez nous</h1>
     <!--Section description-->
     <p class="text-center w-responsive mx-auto mb-5">Si vous avez une questions ou si vous souhaitez adopter un chien.</p>
-
+    <p><img class="slider-pagementions" src="slider-mentions.jpg" alt="Canicross : ancien événement"></p>
     <div class="row">
 
         <!--Grid column-->
