--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
 </header>
 
 <main>
+  <!-- mobile version -->
+  <div class="canicross-slider">
+    <img class="canicross-slider" src="canicross-2.jpg" alt="Canicross : événement 2023">
+    </div>
 <!-- Desktop version -->
   <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
