--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
     <h1 class="h1-responsive font-weight-bold text-center my-4">Contactez nous</h1>
     <!--Section description-->
     <p class="text-center w-responsive mx-auto mb-5">Si vous avez une questions ou si vous souhaitez adopter un chien.</p>
-    <p><img class="slider-pagementions" src="slider-mentions.jpg" alt="Canicross : ancien événement"></p>
+    <p><img class="slider-pagementions" src="images/slider-mentions.jpg" alt="Canicross : ancien événement"></p>
     <div class="row">
 
         <!--Grid column-->
@@ -124,7 +124,7 @@
                     <p>contact@associationcanine.com</p>
                 </li>
                 <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                    <p><img class="img-contact" src="chien-contact.jpg"></p>
+                    <p><img class="img-contact" src="images/chien-contact.jpg"></p>
                 </li>
             </ul>
         </div>
@@ -137,7 +137,7 @@
   <!-- FOOTER -->
   <div class="footer-basic">
     <footer>
-        <div class="social"><a href="https://www.facebook.com/emeline.titus/"><img class="fit-picture" src="facebook.png" alt="logo facebook"></a><a href="https://www.instagram.com/emeimola18/?hl=fr"><img class="fit-picture" src="instagram.png" alt="logo instagram"></a></div>
+        <div class="social"><a href="https://www.facebook.com/emeline.titus/"><img class="fit-picture" src="images/facebook.png" alt="logo facebook"></a><a href="https://www.instagram.com/emeimola18/?hl=fr"><img class="fit-picture" src="images/instagram.png" alt="logo instagram"></a></div>
         <ul class="list-inline">
             <li class="list-inline-item"><a href="index.html">Accueil</a></li>
             <li class="list-inline-item"><a href="evenement.html">Événement</a></li>
