--- a/mentions.html
+++ b/mentions.html
@@ -42,7 +42,7 @@
 <main>
     <h1>Mentions légales</h1>
 
-       <p><img class="slider-pagementions" src="slider-mentions.jpg" alt="Canicross : ancien événement"></p>
+       <p><img class="slider-pagementions" src="images/slider-mentions.jpg" alt="Canicross : ancien événement"></p>
 
     <div class="mentions">
 <p>Pour satisfaire aux dispositions de la loi pour la confiance dans l’économie numérique du 21 juin 2004, seront énoncées ci-après les mentions légales requises afin de permettre l’identification de l’éditeur du présent site Internet.</p>
@@ -65,7 +65,7 @@
   <!-- FOOTER -->
 <div class="footer-basic">
     <footer>
-        <div class="social"><a href="https://www.facebook.com/emeline.titus/"><img class="fit-picture" src="facebook.png" alt="logo facebook"></a><a href="https://www.instagram.com/emeimola18/?hl=fr"><img class="fit-picture" src="instagram.png" alt="logo instagram"></a></div>
+        <div class="social"><a href="https://www.facebook.com/emeline.titus/"><img class="fit-picture" src="images/facebook.png" alt="logo facebook"></a><a href="https://www.instagram.com/emeimola18/?hl=fr"><img class="fit-picture" src="images/instagram.png" alt="logo instagram"></a></div>
         <ul class="list-inline">
             <li class="list-inline-item"><a href="index.html">Accueil</a></li>
             <li class="list-inline-item"><a href="evenement.html">Événement</a></li>
